# deca

./: .gitignore  .gitmodules  BUILD.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  TODO.md  appveyor.yml  deca_gui.py  deca_gui.spec  deca_gui_viewer.py  deca_gui_viewer_adf.py  deca_gui_viewer_image.py  deca_gui_viewer_raw.py  deca_gui_viewer_rtpc.py  deca_gui_viewer_sarc.py  deca_gui_viewer_text.py  entry_point.py  extract_base.sh  extract_gz.sh  extract_jc4.sh  extract_procmon_csv.py  linux_setup.sh  make_linux.sh  make_pex.sh  make_win64.sh  mod_gz_change_demo_area.py  plugin_make_web_map.py  process_aaf.py  process_adf.py  process_avtx.py  process_fe.sh  process_file_ext.py  process_filelist.py  process_magic.py  process_obc.py  process_rtpc.py  process_sarc.py  process_tab_arc.py  (+4 more)
.github/: FUNDING.yml
appveyor/: get_dev_changelog.py  on_success.py  send.ps1
cpp/: CMakeLists.txt
cpp/process_image/: CMakeLists.txt
db/: core.sqlite
deca/: builder.py  compress.py  db_commands.py  db_core.py  db_cross_game.py  db_processor.py  db_types.py  db_view.py  db_wrap.py  digest.py  dxgi.py  dxgi_97.py  dxgi_types.py  errors.py  export_import.py  export_import_adf.py  export_import_audio.py  export_import_rtpc.py  export_map.py  fast_file.py  ff_aaf.py  ff_adf.py  ff_adf_amf.py  ff_adf_amf_gltf.py  ff_adf_amg_gltf.py  ff_adf_export_import.py  ff_arc_tab.py  ff_avtx.py  ff_determine.py  ff_export_import.py  ff_export_import_adf.py  ff_export_import_rtpc.py  ff_gtoc.py  ff_obc.py  ff_rtpc.py  ff_sarc.py  ff_txt.py  ff_types.py  ff_vfs.py  file.py  (+10 more)
doc/: TODO.md  (+5 more)
(+193 files in other folders)
